[gd_scene load_steps=18 format=2]

[ext_resource path="res://chicken/chicken_critter_anims.tres" type="SpriteFrames" id=1]
[ext_resource path="res://addons/behavior_tree/src/blackboard.gd" type="Script" id=2]
[ext_resource path="res://addons/behavior_tree/src/behavior_tree.gd" type="Script" id=3]
[ext_resource path="res://addons/behavior_tree/src/btnodes/composites/bt_sequence.gd" type="Script" id=4]
[ext_resource path="res://chicken/chicken.gd" type="Script" id=5]
[ext_resource path="res://chicken/debug_info.gd" type="Script" id=6]
[ext_resource path="res://behavior_tree/leaves/find_node_from_group.gd" type="Script" id=7]
[ext_resource path="res://behavior_tree/leaves/move_towards.gd" type="Script" id=8]
[ext_resource path="res://chicken/progress_indicator/progress_indicator.tscn" type="PackedScene" id=9]
[ext_resource path="res://behavior_tree/decorators/bt_need_utility.gd" type="Script" id=10]
[ext_resource path="res://behavior_tree/decorators/bt_food_utility.gd" type="Script" id=11]
[ext_resource path="res://behavior_tree/composites/utility_selector.gd" type="Script" id=12]
[ext_resource path="res://behavior_tree/leaves/drink.gd" type="Script" id=13]
[ext_resource path="res://addons/behavior_tree/src/btnodes/decorators/bt_always.gd" type="Script" id=14]
[ext_resource path="res://behavior_tree/leaves/eat.gd" type="Script" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[node name="Chicken" type="KinematicBody2D" groups=[
"Hens",
]]
position = Vector2( 158, 85 )
collision/safe_margin = 0.2
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -3 )
frames = ExtResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 3 )
is_active = true
_blackboard = NodePath("../Blackboard")
_agent = NodePath("..")

[node name="UtilitySelector" type="Node" parent="BehaviorTree"]
script = ExtResource( 12 )

[node name="BTWaterUtility" type="Node" parent="BehaviorTree/UtilitySelector"]
script = ExtResource( 10 )
chicken_path = NodePath("../../..")

[node name="MoveTowardsResourceSequence" type="Node" parent="BehaviorTree/UtilitySelector/BTWaterUtility"]
script = ExtResource( 4 )

[node name="FindNodeFromGroup" type="Node" parent="BehaviorTree/UtilitySelector/BTWaterUtility/MoveTowardsResourceSequence"]
script = ExtResource( 7 )
group = "Water"
result_key = "target"

[node name="MoveTowards" type="Node" parent="BehaviorTree/UtilitySelector/BTWaterUtility/MoveTowardsResourceSequence"]
script = ExtResource( 8 )
target_key = "target"
speed = 5

[node name="BTAlways" type="Node" parent="BehaviorTree/UtilitySelector/BTWaterUtility/MoveTowardsResourceSequence"]
script = ExtResource( 14 )
always_what = 1

[node name="Drink" type="Node" parent="BehaviorTree/UtilitySelector/BTWaterUtility/MoveTowardsResourceSequence/BTAlways"]
script = ExtResource( 13 )
resource_key = "target"

[node name="BTFoodUtility" type="Node" parent="BehaviorTree/UtilitySelector"]
script = ExtResource( 11 )
chicken_path = NodePath("../../..")

[node name="MoveTowardsFoodSequence" type="Node" parent="BehaviorTree/UtilitySelector/BTFoodUtility"]
script = ExtResource( 4 )

[node name="FindNodeFromGroup" type="Node" parent="BehaviorTree/UtilitySelector/BTFoodUtility/MoveTowardsFoodSequence"]
script = ExtResource( 7 )
group = "Food"
result_key = "target"

[node name="MoveTowards" type="Node" parent="BehaviorTree/UtilitySelector/BTFoodUtility/MoveTowardsFoodSequence"]
script = ExtResource( 8 )
target_key = "target"
speed = 5

[node name="BTAlways" type="Node" parent="BehaviorTree/UtilitySelector/BTFoodUtility/MoveTowardsFoodSequence"]
script = ExtResource( 14 )
always_what = 1

[node name="Eat" type="Node" parent="BehaviorTree/UtilitySelector/BTFoodUtility/MoveTowardsFoodSequence/BTAlways"]
script = ExtResource( 15 )
resource_key = "target"

[node name="Blackboard" type="Node" parent="."]
script = ExtResource( 2 )

[node name="DebugInfo" type="Area2D" parent="."]
script = ExtResource( 6 )
chicken_path = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DebugInfo"]
position = Vector2( 0, -3 )
shape = SubResource( 2 )

[node name="WaterNeed" parent="DebugInfo" instance=ExtResource( 9 )]
margin_top = -9.0
margin_bottom = -6.0

[node name="FoodNeed" parent="DebugInfo" instance=ExtResource( 9 )]
margin_top = -11.0
margin_bottom = -13.0

[connection signal="mouse_entered" from="DebugInfo" to="DebugInfo" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="DebugInfo" to="DebugInfo" method="_on_mouse_exited"]
